# MOwNiT

./: .gitignore
lab1/: main.c
lab2/: CMakeLists.txt  excercise_double.c  excercise_double.h  exercise_float.c  main.c  matrix_double.c  vector_double.c  vector_float.h
lab2/double/: banded_matrix_double.c  banded_matrix_double.h  excercise_double.c  excercise_double.h  matrix_double.c  matrix_double.h  vector_double.c  vector_double.h
lab2/float/: banded_matrix_float.c  banded_matrix_float.h  exercise_float.c  exercise_float.h  matrix_float.c  matrix_float.h  vector_float.c
lab3/: CMakeLists.txt  main.c
lab3/double/: banded_matrix_double.c  excercise_double.c  excercise_double.h  matrix_double.c  matrix_double.h  vector_double.c  vector_double.h
lab3/float/: banded_matrix_float.c  exercise_float.c  exercise_float.h  matrix_float.c  matrix_float.h  vector_float.c  vector_float.h
lab4/: Roots of equations.ipynb
lab4/roots_of_eq/src/: functions.py  main.py
lab5/: Interpolation.ipynb
lab5/interpolation/src/: .~lock.Errors.xlsx#  Errors.xlsx  analysis.py  data_saver.py  ex1.py  ex2.py  functions.py  main.py
lab6/: Spline.ipynb
lab6/spline/src/: analysis.py  ex1.py  ex2.py  functions.py
lab7/: Analysis.ipynb  Approximation.ipynb
lab7/approximation/src/: analysis.py  ex.py  ex1.py  functions.py  main.py
lab8/: Differential_equations.ipynb
lab8/differential_equations/src/: functions.py
